unpackaged/main/default/objects/sixsense__X6sense_Contact_Score__c/fields/sixsense__Company_6QA__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Company_6QA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company 6QA</label>
    <type>Checkbox</type>
</CustomField>