unpackaged/main/default/objects/sixsense__X6sense_Contact_Score__c/fields/sixsense__Company_6QA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Company_6QA_Start_Date__c</fullName>
    <label>Company 6QA Start Date</label>
    <type>Date</type>
</CustomField>