unpackaged/main/default/objects/sixsense__X6sense_Contact_Score__c/fields/sixsense__Company_Numerical_Reach_Score__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Company_Numerical_Reach_Score__c</fullName>
    <label>Company Numerical Reach Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>